--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,24 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    /* jpa */
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    /* db */
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.2.0'
+    /* mybatis */
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+    /* file upload(local) */
+    implementation group: 'commons-io', name: 'commons-io', version: '2.13.0'
+
+    /* lombok */
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
